--- a/src/assets/Global.css
+++ b/src/assets/Global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@100;200;300;400;500;600;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -41,7 +43,7 @@ body {
 	color: var(--color-white);
 	/*Miscellaneous*/
 	line-height: 1.7;
-	font-family: sans-serif;
+	font-family: "IBM Plex Serif", serif;
 }
 
 .container {
