--- a/src/assets/Global.css
+++ b/src/assets/Global.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@100;200;300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@100;200;300;400;500;600;700&display=swap');
 
 *,
 *::before,
@@ -43,14 +43,14 @@ body {
 	color: var(--color-white);
 	/*Miscellaneous*/
 	line-height: 1.7;
-	font-family: "IBM Plex Serif", serif;
+	font-family: 'IBM Plex Serif', serif;
 }
 
 .container {
 	/*Box model stuff*/
 	width: var(--container-width-large);
 	margin: 0 auto;
-	padding-top: 5rem;
+	/* padding-top: 5rem; */
 }
 
 section {
