--- a/src/assets/Global.css
+++ b/src/assets/Global.css
@@ -50,7 +50,7 @@ body {
 	/*Box model stuff*/
 	width: var(--container-width-large);
 	margin: 0 auto;
-	/* padding-top: 5rem; */
+	padding-top: 5rem;
 }
 
 section {
