Started makeing the contactpage

--- a/src/assets/Global.css
+++ b/src/assets/Global.css
@@ -28,6 +28,10 @@
 	--container-width-small: 90%;
 }
 
+::placeholder {
+    color: #63B4FF;
+}
+
 html {
 	/*Miscellaneous*/
 	scroll-behavior: smooth;
