--- a/src/assets/Global.css
+++ b/src/assets/Global.css
@@ -30,8 +30,8 @@
 	--container-width-small: 90%;
 }
 
-::placeholder {
-    color: #63B4FF;
+::placeholder{
+	color: var(--color-primary);
 }
 
 html {
