--- a/src/assets/Global.css
+++ b/src/assets/Global.css
@@ -23,6 +23,8 @@
 :root {
 	/*Miscellaneous*/
 	--color-bg: linear-gradient(#1f365a, #000);
+	/* --color-bg: linear-gradient(-205deg, #1c222e, #000); */
+
 	--color-primary: rgb(6, 212, 227);
 	--color-white: #fff;
 
