--- a/src/assets/Global.css
+++ b/src/assets/Global.css
@@ -37,8 +37,10 @@
 
 ::placeholder{
 	color: var(--color-primary);
-/* ::-webkit-scrollbar {
-	display: none; Remove scrollbar for Chrome, Safari, Microsoft Edge and Opera */
+}
+
+::-webkit-scrollbar {
+	display: none; Remove scrollbar for Chrome, Safari, Microsoft Edge and Opera
 }
 
 html {
