--- a/src/assets/Global.css
+++ b/src/assets/Global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800&family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
 @font-face {
 	font-family: AstroSpace;
@@ -57,7 +57,7 @@ body {
 	color: var(--color-white);
 	/*Miscellaneous*/
 	line-height: 1.7;
-	font-family: 'IBM Plex Serif', serif;
+	font-family: 'Space Grotesk', sans-serif;
 }
 
 .container {
